@@ -62,6 +62,12 @@ Release date: TBA
 
   Closes #4698
 
+* Don't emit ``import-error``, ``no-name-in-module``, and ``ungrouped-imports``
+  for imports guarded by ``sys.version_info`` or ``typing.TYPE_CHECKING``.
+
+  Closes #3285
+  Closes #3382
+
 * Fix ``invalid-overridden-method`` with nested property
 
   Closes #4368
